Desenvolvimento das seções de projetos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <nav id="nav">
 
-        <button id="btn-mobile" aria-label="Abrir menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu
+        <button id="btn-mobile" aria-label="Abrir menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
           <span id="hamburger"></span>
         </button>
 
@@ -99,6 +99,60 @@
       </div>
     </article>
 
+    <article class="projects">
+      <div class="container">
+        <h2>Projetos <span>profissionais</span> e pessoais</h2>
+
+        <section>
+          <div>
+            <img src="img/blob.png" alt="">
+            <p>UI Designs</p>
+          </div>
+
+          <ul>
+            <li> <img src="img/export.png" alt="">
+              <a href="" class="view">Ver projeto completo</a>
+            </li>
+            <li> <img src="img/Exporte 1.png" alt="">
+              <a href="" class="view">Ver projeto completo</a>
+            </li>
+            <li> <img src="img/Exportee.png" alt="">
+              <a href="" class="view">Ver projeto completo</a>
+            </li>
+            <li> <img src="img/Group 202 (1).png" alt="">
+              <a href="" class="view">Ver projeto completo</a>
+            </li>
+          </ul>
+        </section>
+      </div>
+    </article>
+
+    <article class="projects sites">
+      <div class="container">
+
+        <section>
+          <div>
+            <img src="img/blob.png" alt="">
+            <p>Web Sites</p>
+          </div>
+
+          <ul>
+            <li> <img src="img/export.png" alt="">
+              <a href="" class="view">Ver projeto completo</a>
+            </li>
+            <li> <img src="img/Exporte 1.png" alt="">
+              <a href="" class="view">Ver projeto completo</a>
+            </li>
+            <li> <img src="img/Exportee.png" alt="">
+              <a href="" class="view">Ver projeto completo</a>
+            </li>
+            <li> <img src="img/Group 202 (1).png" alt="">
+              <a href="" class="view">Ver projeto completo</a>
+            </li>
+          </ul>
+        </section>
+      </div>
+    </article>
 
   </main>
 
