--- a/index.html
+++ b/index.html
@@ -156,6 +156,41 @@
 
   </main>
 
+  <footer>
+    <div class="container">
+      <ul>
+        <li>
+          <h4>Obrigado pela <span>visita</span></h4>
+          <p>Fico muito feliz com sua presença, mande uma mensagem para trocarmos experiências e fazer network! </p>
+        </li>
+
+        <li>
+          <h4>Redes</h4>
+          <a href="">Behance</a>
+          <a href="">Dribble</a>
+          <a href="">Github</a>
+          <a href="">Linkedin</a>
+          <a href="">Instagram</a>
+        </li>
+
+        <li>
+          <h4>Contato</h4>
+          <a href="">E-mail</a>
+          <a href="">Whatsapp</a>
+        </li>
+
+        <li>
+          <h4>Designed by</h4>
+          <a href="">Marcos Souza</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+
+  <section class="after-footer">
+    <p>Marcos Souza - Todos os direitos reservados</p>
+  </section>
+
   <script src="script.js"></script>
 </body>
 
