--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio | Bem vindo</title>
 
+  <link rel="shortcut icon" href="img/fav.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="responsivo.css">
 </head>
@@ -25,16 +26,16 @@
         </button>
 
         <ul id="menu" role="menu">
-          <li><a href="">Sobre</a></li>
-          <li><a href="">Serviços</a></li>
-          <li><a href="">Projetos</a></li>
-          <li><a href="" class="btn-primary">Contato</a></li>
+          <li><a href="#sb">Sobre</a></li>
+          <li><a href="#sv">Serviços</a></li>
+          <li><a href="#pj">Projetos</a></li>
+          <li><a href="#ct" class="btn-primary">Contato</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
+  <main id="sb">
     <article class="start">
       <img class="blur-roxo" src="img/blue roxo.png" alt="">
       <img class="blur-blue" src="img/blue azul.png" alt="">
@@ -43,15 +44,15 @@
           <h2>Olá! Eu sou</h2>
           <h1>Marcos Souza</h1>
           <p>Desenvolvedor Front-end e UI|UX Designer apaixonado por jogos, animais e músicas!</p>
-          <a href="" class="btn-primary">Contato</a>
+          <a href="#ct" class="btn-primary">Contato</a>
         </section>
-        <section class="img-start"><img src="img/img.png" alt="Imagem pessoal"></section>
+        <section class="img-start"><img src="img/img.png" alt="Imagem pessoal mostrando as habilidades"></section>
       </div>
     </article>
 
 
-    <article class="services">
-      <img class="blur-roxo2" src="img/blue roxo.png" alt="">
+    <article id="sv" class="services">
+      <img class="blur-roxo2" src="img/blue roxo.png" alt="imagem roxo com blur">
       <div class="container">
         <section class="quote">
           <h3>Meus</h3>
@@ -64,7 +65,7 @@
         <section class="cards">
           <ul>
             <li>
-              <img class="icon" src="img/iconPc.png" alt="UX Writing">
+              <img class="icon" src="img/iconPc.png" alt="ícone de computador">
               <div>
                 <h4>Front-end Developer</h4>
                 <p>Desenvolvimento de sites profissionais, com as melhores tecnologias do mercado!</p>
@@ -72,7 +73,7 @@
             </li>
 
             <li>
-              <img class="icon" src="img/iconUxWriting.png" alt="UX Writing">
+              <img class="icon" src="img/iconUxWriting.png" alt="ícone de de lápis">
               <div>
                 <h4>UX Writing</h4>
                 <p>Crio documentações de sites e posts em blogs!</p>
@@ -80,7 +81,7 @@
             </li>
 
             <li>
-              <img class="icon" src="img/iconDesign.png" alt="UX e UI Design">
+              <img class="icon" src="img/iconDesign.png" alt="ícone de régua e lápis">
               <div>
                 <h4>UI & UX Design</h4>
                 <p>Desenvolvimento de protótipos, com adobe XD ou Figma!</p>
@@ -88,7 +89,7 @@
             </li>
 
             <li>
-              <img class="icon" src="img/cellphone.png" alt="Criador de conteúdo">
+              <img class="icon" src="img/cellphone.png" alt="ícone de celular">
               <div>
                 <h4>Criador de conteúdo</h4>
                 <p>Criador de conteúdo para o Instagram e Linkedin</p>
@@ -99,28 +100,28 @@
       </div>
     </article>
 
-    <article class="projects">
+    <article id="pj" class="projects">
       <div class="container">
         <h2>Projetos <span>profissionais</span> e pessoais</h2>
 
         <section>
           <div>
-            <img src="img/blob.png" alt="">
+            <img src="img/blob.png" alt="imagem roxa de blur">
             <p>UI Designs</p>
           </div>
 
           <ul>
-            <li> <img src="img/export.png" alt="">
-              <a href="" class="view">Ver projeto completo</a>
+            <li> <img src="img/export.png" alt="Projeto de Web Design">
+              <a target="_blank" href="https://www.behance.net/gallery/119556981/UI-Design-do-meu-portfolio" class="view">Ver projeto completo</a>
             </li>
-            <li> <img src="img/Exporte 1.png" alt="">
-              <a href="" class="view">Ver projeto completo</a>
+            <li> <img src="img/Exporte 1.png" alt="Projeto de Web Design">
+              <a target="_blank" href="https://www.behance.net/gallery/119617297/Redesign-de-um-portfolio" class="view">Ver projeto completo</a>
             </li>
-            <li> <img src="img/Exportee.png" alt="">
-              <a href="" class="view">Ver projeto completo</a>
+            <li> <img src="img/Exportee.png" alt="Projeto de Web Design">
+              <a target="_blank" href="https://www.behance.net/gallery/120152645/Freelance-de-Design" class="view">Ver projeto completo</a>
             </li>
-            <li> <img src="img/Group 202 (1).png" alt="">
-              <a href="" class="view">Ver projeto completo</a>
+            <li> <img src="img/Group 202 (1).png" alt="Projeto de Web Design">
+              <a target="_blank" href="https://www.behance.net/gallery/119557135/UI-Design-de-um-projeto-pessoal" class="view">Ver projeto completo</a>
             </li>
           </ul>
         </section>
@@ -137,17 +138,17 @@
           </div>
 
           <ul>
-            <li> <img src="img/export.png" alt="">
-              <a href="" class="view">Ver projeto completo</a>
+            <li> <img src="img/export.png" alt="Projeto de Web Design">
+              <a target="_blank" href="https://www.behance.net/gallery/119556981/UI-Design-do-meu-portfolio" class="view">Ver projeto completo</a>
             </li>
-            <li> <img src="img/Exporte 1.png" alt="">
-              <a href="" class="view">Ver projeto completo</a>
+            <li> <img src="img/Exporte 1.png" alt="Projeto de Web Design">
+              <a target="_blank" href="https://www.behance.net/gallery/119617297/Redesign-de-um-portfolio" class="view">Ver projeto completo</a>
             </li>
-            <li> <img src="img/Exportee.png" alt="">
-              <a href="" class="view">Ver projeto completo</a>
+            <li> <img src="img/Exportee.png" alt="Projeto de Web Design">
+              <a target="_blank" href="https://www.behance.net/gallery/120152645/Freelance-de-Design" class="view">Ver projeto completo</a>
             </li>
-            <li> <img src="img/Group 202 (1).png" alt="">
-              <a href="" class="view">Ver projeto completo</a>
+            <li> <img src="img/Group 202 (1).png" alt="Projeto de Web Design">
+              <a target="_blank" href="https://www.behance.net/gallery/119557135/UI-Design-de-um-projeto-pessoal" class="view">Ver projeto completo</a>
             </li>
           </ul>
         </section>
@@ -156,7 +157,7 @@
 
   </main>
 
-  <footer>
+  <footer id="ct">
     <div class="container">
       <ul>
         <li>
@@ -166,17 +167,17 @@
 
         <li>
           <h4>Redes</h4>
-          <a href="">Behance</a>
-          <a href="">Dribble</a>
-          <a href="">Github</a>
-          <a href="">Linkedin</a>
-          <a href="">Instagram</a>
+          <a href="https://www.behance.net/marcossouza36">Behance</a>
+          <a href="https://dribbble.com/Marcos_Souza">Dribble</a>
+          <a href="https://github.com/MarcosDS7">Github</a>
+          <a href="https://www.linkedin.com/in/marcos-souza-814414195/">Linkedin</a>
+          <a href="https://www.instagram.com/linear.up/">Instagram</a>
         </li>
 
         <li>
           <h4>Contato</h4>
-          <a href="">E-mail</a>
-          <a href="">Whatsapp</a>
+          <a>(16) 99756-0979</a>
+          <a target="_blank" href="https://api.whatsapp.com/send?phone=551499685-3425">Whatsapp</a>
         </li>
 
         <li>
