--- a/index.html
+++ b/index.html
@@ -12,39 +12,47 @@
   <link rel="stylesheet" href="responsivo.css">
 </head>
 
-<body>
+<body class="sec">
   <header id="header">
     <div class="container">
       <a href="index.html" class="logo">
         Portfólio
       </a>
 
-      <nav id="nav">
+      <nav id="nav" class="acessibilidade">
 
         <button id="btn-mobile" aria-label="Abrir menu" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
           <span id="hamburger"></span>
         </button>
 
         <ul id="menu" role="menu">
-          <li><a href="#sb">Sobre</a></li>
-          <li><a href="#sv">Serviços</a></li>
-          <li><a href="#pj">Projetos</a></li>
-          <li><a href="#ct" class="btn-primary">Contato</a></li>
+          <li><a href="#sb" accesskey="1" title="Alt 1">Sobre</a></li>
+          <li><a href="#sv" accesskey="2" title="Alt 2">Serviços</a></li>
+          <li><a href="#pj" accesskey="3" title="Alt 3">Projetos</a></li>
+          <li><a href="#ct" class="btn-primary" accesskey="4" title="Alt 4">Contato</a></li>
+          <a id="mode" href="#" class="toggle sun sunpadrao" title="Contraste (ALT T)" aria-hiddnen="true" accesskey="T"></a>
         </ul>
       </nav>
     </div>
   </header>
+
+  <div vw class="enabled" title="VLibras">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
 
   <main id="sb">
     <article class="start">
       <img class="blur-roxo" src="img/blue roxo.png" alt="">
       <img class="blur-blue" src="img/blue azul.png" alt="">
       <div class="container">
-        <section class="quote">
+        <section class="quote" title="Informações pessoais">
           <h2>Olá! Eu sou</h2>
           <h1>Marcos Souza</h1>
           <p>Desenvolvedor Front-end e UI|UX Designer apaixonado por jogos, animais e músicas!</p>
-          <a href="#ct" class="btn-primary">Contato</a>
+          <a href="#ct" class="btn-primary" accesskey="4" title="Alt 4">Contato</a>
         </section>
         <section class="img-start"><img src="img/img.png" alt="Imagem pessoal mostrando as habilidades"></section>
       </div>
@@ -54,15 +62,15 @@
     <article id="sv" class="services">
       <img class="blur-roxo2" src="img/blue roxo.png" alt="imagem roxo com blur">
       <div class="container">
-        <section class="quote">
+        <section class="quote" title="Ver cúrriculo e serviços prestados">
           <h3>Meus</h3>
           <h2>Serviços</h2>
           <p>Baixe meu currículo para consultar certificados e
             experiências!</p>
-          <a href="Marcos Souza - CV 2021.pdf" target="_blank" class="btn-primary">Download CV</a>
+          <a href="Marcos Souza - CV 2021.pdf" target="_blank" class="btn-primary" title="Currículo -- abrirá em nova aba">Download CV</a>
         </section>
 
-        <section class="cards">
+        <section class="cards" title="Serviços prestados">
           <ul>
             <li>
               <img class="icon" src="img/iconPc.png" alt="ícone de computador">
@@ -100,7 +108,7 @@
       </div>
     </article>
 
-    <article id="pj" class="projects">
+    <article id="pj" class="projects" title="Designs pessoais e profissionais">
       <div class="container">
         <h2>Projetos <span>profissionais</span> e pessoais</h2>
 
@@ -112,43 +120,43 @@
 
           <ul>
             <li> <img src="img/export.png" alt="Projeto de Web Design">
-              <a target="_blank" href="https://www.behance.net/gallery/119556981/UI-Design-do-meu-portfolio" class="view">Ver projeto completo</a>
+              <a target="_blank" href="https://www.behance.net/gallery/119556981/UI-Design-do-meu-portfolio" class="view" title="Abrir projeto em nova aba">Ver projeto completo</a>
             </li>
             <li> <img src="img/Exporte 1.png" alt="Projeto de Web Design">
-              <a target="_blank" href="https://www.behance.net/gallery/119617297/Redesign-de-um-portfolio" class="view">Ver projeto completo</a>
+              <a target="_blank" href="https://www.behance.net/gallery/119617297/Redesign-de-um-portfolio" class="view" title="Abrir projeto em nova aba">Ver projeto completo</a>
             </li>
             <li> <img src="img/Exportee.png" alt="Projeto de Web Design">
-              <a target="_blank" href="https://www.behance.net/gallery/120152645/Freelance-de-Design" class="view">Ver projeto completo</a>
+              <a target="_blank" href="https://www.behance.net/gallery/120152645/Freelance-de-Design" class="view" title="Abrir projeto em nova aba">Ver projeto completo</a>
             </li>
             <li> <img src="img/Group 202 (1).png" alt="Projeto de Web Design">
-              <a target="_blank" href="https://www.behance.net/gallery/119557135/UI-Design-de-um-projeto-pessoal" class="view">Ver projeto completo</a>
+              <a target="_blank" href="https://www.behance.net/gallery/119557135/UI-Design-de-um-projeto-pessoal" class="view" title="Abrir projeto em nova aba">Ver projeto completo</a>
             </li>
           </ul>
         </section>
       </div>
     </article>
 
-    <article class="projects sites">
+    <article class="projects sites" title="Sites profissionais e pessoais">
       <div class="container">
 
         <section>
           <div>
-            <img src="img/blob.png" alt="">
+            <img src="img/blob.png" alt="Imagem de blur">
             <p>Web Sites</p>
           </div>
 
           <ul>
-            <li> <img src="img/export.png" alt="Projeto de Web Design">
-              <a target="_blank" href="https://www.behance.net/gallery/119556981/UI-Design-do-meu-portfolio" class="view">Ver projeto completo</a>
+            <li> <img src="img/site.png" alt="Site de saúde">
+              <a target="_blank" href="https://marcosds7.github.io/Projeto-PS/" class="view" title="Abrir projeto em nova aba">Ver projeto completo</a>
             </li>
-            <li> <img src="img/Exporte 1.png" alt="Projeto de Web Design">
-              <a target="_blank" href="https://www.behance.net/gallery/119617297/Redesign-de-um-portfolio" class="view">Ver projeto completo</a>
+            <li> <img src="img/site2.png" alt="Projeto de Café">
+              <a target="_blank" href="https://marcosds7.github.io/Projeto-Coffee/" class="view" title="Abrir projeto em nova aba">Ver projeto completo</a>
             </li>
-            <li> <img src="img/Exportee.png" alt="Projeto de Web Design">
-              <a target="_blank" href="https://www.behance.net/gallery/120152645/Freelance-de-Design" class="view">Ver projeto completo</a>
+            <li> <img src="img/site3.png" alt="Projeto de Loja de enxovais">
+              <a target="_blank" href="https://stacy-store.netlify.app/" class="view" title="Abrir projeto em nova aba">Ver projeto completo</a>
             </li>
-            <li> <img src="img/Group 202 (1).png" alt="Projeto de Web Design">
-              <a target="_blank" href="https://www.behance.net/gallery/119557135/UI-Design-de-um-projeto-pessoal" class="view">Ver projeto completo</a>
+            <li> <img src="img/site4.png" alt="Projeto desenvolvido para uma empresa">
+              <a target="_blank" href="http://ltpa.com.br/" class="view" title="Abrir projeto em nova aba">Ver projeto completo</a>
             </li>
           </ul>
         </section>
@@ -157,7 +165,7 @@
 
   </main>
 
-  <footer id="ct">
+  <footer id="ct" title="Contatos">
     <div class="container">
       <ul>
         <li>
@@ -165,24 +173,24 @@
           <p>Fico muito feliz com sua presença, mande uma mensagem para trocarmos experiências e fazer network! </p>
         </li>
 
-        <li>
+        <li title="Redes sociais">
           <h4>Redes</h4>
-          <a href="https://www.behance.net/marcossouza36">Behance</a>
-          <a href="https://dribbble.com/Marcos_Souza">Dribble</a>
-          <a href="https://github.com/MarcosDS7">Github</a>
-          <a href="https://www.linkedin.com/in/marcos-souza-814414195/">Linkedin</a>
-          <a href="https://www.instagram.com/linear.up/">Instagram</a>
+          <a href="https://www.behance.net/marcossouza36" title="Abrir projeto em nova aba">Behance</a>
+          <a href="https://dribbble.com/Marcos_Souza" title="Abrir projeto em nova aba">Dribble</a>
+          <a href="https://github.com/MarcosDS7" title="Abrir projeto em nova aba">Github</a>
+          <a href="https://www.linkedin.com/in/marcos-souza-814414195/" title="Abrir projeto em nova aba">Linkedin</a>
+          <a href="https://www.instagram.com/linear.up/" title="Abrir projeto em nova aba">Instagram</a>
         </li>
 
-        <li>
+        <li title="Contatos">
           <h4>Contato</h4>
           <a>(16) 99756-0979</a>
-          <a target="_blank" href="https://api.whatsapp.com/send?phone=551499685-3425">Whatsapp</a>
+          <a target="_blank" href="https://api.whatsapp.com/send?phone=551499685-3425" title="Abrir projeto em nova aba">Whatsapp</a>
         </li>
 
-        <li>
+        <li title="Site e Design feito por Marcos">
           <h4>Designed by</h4>
-          <a href="">Marcos Souza</a>
+          <a>Marcos Souza</a>
         </li>
       </ul>
     </div>
@@ -193,6 +201,26 @@
   </section>
 
   <script src="script.js"></script>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+
+    const sec = document.querySelector('.sec');
+    const acs = document.querySelector('.acessibilidade');
+    const toggle = document.querySelector('.toggle');
+    const sun = document.querySelector('.sun');
+
+    toggle.onclick = function () {
+      sec.classList.toggle('dark');
+      acs.classList.toggle('dark');
+      sun.classList.toggle('troca');
+      sun.classList.toggle('sunpadrao');
+
+    }
+
+  </script>
+
 </body>
 
 </html>
